Fix chip icon gaps

--- a/src/components/chip/chip.scss
+++ b/src/components/chip/chip.scss
@@ -15,7 +15,7 @@
   padding-block: 0;
   height: var(--zn-spacing-medium);
   text-align: center;
-  gap: var(--zn-spacing-small);
+  gap: var(--zn-spacing-x-small);
   width: fit-content;
   justify-content: center;
   align-items: center;
